--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="calc.css">
 </head>
 <body>
-	<h1 align="center">    Calculator</h1>
+	<h1 align="center">    my first Calculator</h1>
 	<br>
 
 	<div id="full">
